To many changes to list, I know I know See the commit history for changes. Signed-off-by: Joey Smith <jsmith@webinertia.net>
Signed-off-by: Joey Smith <jsmith@webinertia.net>

--- a/src/App/templates/layout/admin.phtml
+++ b/src/App/templates/layout/admin.phtml
@@ -68,7 +68,7 @@ $this->headScript()
             'integrity' => 'sha384-gpIh5aLQ0qmX8kZdyhsd6jA24uKLkqIr1WAGtantR4KsS97l/NRBvh8/8OYGThAf',
             'crossorigin' => 'anonymous',
         ],
-    );
+    )->appendScript($this->htmxConfig);
 
 $this->inlineScript()
     ->appendFile(
