--- a/src/App/templates/layout/default.phtml
+++ b/src/App/templates/layout/default.phtml
@@ -1,117 +1,124 @@
 <?php
+
+declare(strict_types=1);
+
+$this->headMeta()
+    ->setCharSet('UTF-8')
+    ->appendName('viewport', 'width=device-width, initial-scale=1')
+    ->appendName('color-scheme', 'light dark')
+    ->appendHttpEquiv('X-UA-Compatible', 'IE=edge');
+
+$this->headLink(
+    [
+        'rel'  => 'shortcut icon',
+        'href' => 'https://getlaminas.org/images/favicon/favicon.ico',
+    ]
+);
+// styles
 $this->headLink()
-    ->prependStylesheet('https://use.fontawesome.com/releases/v5.13.0/css/all.css')
-    ->prependStylesheet('https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css');
+    ->appendStylesheet('https://use.fontawesome.com/releases/v5.13.0/css/all.css')
+    ->appendStylesheet('https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.green.min.css');
+// head script files and script
+
+$this->headScript()
+->appendFile(
+    'https://unpkg.com/htmx.org@2.0.1/dist/htmx.js',
+    'text/javascript',
+    [
+        'integrity' => 'sha384-gpIh5aLQ0qmX8kZdyhsd6jA24uKLkqIr1WAGtantR4KsS97l/NRBvh8/8OYGThAf',
+        'crossorigin' => 'anonymous',
+    ],
+)->appendScript(
+    $this->htmxConfig,
+    '',
+    ['noescape' => true]
+);
+
+// inline script which is printed at bottom of page
 $this->inlineScript()
-    ->prependFile('https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js')
-    ->prependFile('https://code.jquery.com/jquery-3.5.1.min.js');
+    ->appendFile('https://code.jquery.com/jquery-3.5.1.min.js');
 ?>
-<!DOCTYPE html>
+<?=$this->doctype();?>
+
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="shortcut icon" href="https://getlaminas.org/images/favicon/favicon.ico" />
+    <base href="<?=$this->basePath('/');?>" />
     <?=$this->headTitle('mezzio')->setSeparator(' - ')->setAutoEscape(false)?>
     <?=$this->headMeta()?>
     <?=$this->headLink()?>
-    <style>
-        body { padding-top: 70px; }
-        .app { min-height: 100vh; }
-        .app-footer { padding-bottom: 1em; }
-        .mezzio-green, h2 a, h2 a:hover { color: #009655; }
-        .navbar-brand { padding: 0; }
-        .navbar-brand img { margin: -.5rem 0; filter: brightness(0) invert(1); }
-    </style>
+    <?=$this->headScript()?>
 </head>
-<body class="app">
-    <header class="app-header">
-        <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="#navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <!-- Brand -->
-                    <a class="navbar-brand" href="<?=$this->url('home')?>">
-                        <img src="https://docs.laminas.dev/img/laminas-mezzio-rgb.svg" alt="Laminas Mezzio" height="56" />
+<body>
+    <header id="app-header" class="container">
+        <nav>
+            <!-- Brand -->
+            <ul>
+                <li>
+                    <a href="<?=$this->url('home')?>">
+                        <img src="https://docs.laminas.dev/img/laminas-mezzio-rgb.svg" alt="Laminas Mezzio" width="300" />
                     </a>
-                </div>
-                <!-- Links -->
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a href="https://docs.mezzio.dev/mezzio" target="_blank" class="nav-link">
-                                <i class="fa fa-book"></i> Docs
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="https://github.com/mezzio/mezzio" target="_blank" class="nav-link">
-                                <i class="fa fa-wrench"></i> Contribute
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="<?=$this->url('api.ping')?>" class="nav-link">
-                                Ping Test
-                            </a>
-                        </li>
-                        <?php
-                        if ($this->user->getDetail('role_id') === 'Administrator'):
-                        ?>
-                        <li class="nav-item">
-                            <a href="<?=$this->url('admin')?>" class="nav-link">
-                                Admin
-                            </a>
-                        </li>
-                        <?php
-                        endif;
-                        ?>
-                        <?php
-                        if ($this->user->getIdentity() === 'guest'):
-                        ?>
-                        <li class="nav-item">
-                            <a href="<?=$this->url('login')?>" class="nav-link">
-                                Sign In
-                            </a>
-                        </li>
-                        <?php
-                        else:
-                        ?>
-                        <li class="nav-item">
-                            <a href="<?=$this->url('logout')?>" class="nav-link">
-                                Sign Out
-                            </a>
-                        </li>
-                        <?php
-                        endif;
-                        ?>
-                        <li class="nav-item">
-                            <a href="<?=$this->url('cm.contact', ['list_id' => 1])?>" class="nav-link">
-                                CreateContact Test
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+                </li>
+            </ul>
+            <!-- Links -->
+            <ul>
+                <li>
+                    <a href="https://docs.mezzio.dev/mezzio" target="_blank">
+                        <i class="fa fa-book"></i> Docs
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/mezzio/mezzio" target="_blank">
+                        <i class="fa fa-wrench"></i> Contribute
+                    </a>
+                </li>
+
+                <li>
+                    <a href="<?=$this->url('api.ping')?>">
+                        Ping Test
+                    </a>
+                </li>
+                <?php
+                if ($this->user->getDetail('role_id') === 'Administrator'):
+                ?>
+                <li>
+                    <a href="<?=$this->url('admin')?>">
+                        Admin
+                    </a>
+                </li>
+                <?php
+                endif;
+                ?>
+                <?php
+                if ($this->user->getIdentity() === 'guest'):
+                ?>
+                <li>
+                    <a href="<?=$this->url('login')?>">
+                        Sign In
+                    </a>
+                </li>
+                <?php
+                else:
+                ?>
+                <li>
+                    <a href="<?=$this->url('logout')?>">
+                        Sign Out
+                    </a>
+                </li>
+                <?php
+                endif;
+                ?>
+            </ul>
         </nav>
     </header>
-
-    <div class="app-content">
-        <main class="container">
-            <?=$this->content?>
-        </main>
-    </div>
-
-    <footer class="app-footer">
-        <div class="container">
-            <hr />
-            <p>
-                &copy; <?=date('Y')?> <a href="https://getlaminas.org/">Laminas Project</a> a Series of LF Projects, LLC.
-            </p>
-        </div>
+    <main class="container">
+        <?=$this->content?>
+    </main>
+    <footer id="app-footer" class="container">
+        <hr />
+        <p>
+            &copy; <?=date('Y')?> <a href="https://getlaminas.org/">Laminas Project</a> a Series of LF Projects, LLC.
+        </p>
     </footer>
-
     <?=$this->inlineScript()?>
 </body>
 </html>
