--- a/src/App/templates/layout/default.phtml
+++ b/src/App/templates/layout/default.phtml
@@ -17,7 +17,9 @@ $this->headLink(
 // styles
 $this->headLink()
     ->appendStylesheet('https://use.fontawesome.com/releases/v5.13.0/css/all.css')
-    ->appendStylesheet('https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.green.min.css');
+    ->appendStylesheet('https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.green.min.css')
+    ->appendStylesheet($this->basePath('front-end/css/pico-override.css'))
+    ->appendStylesheet($this->basePath('front-end/css/style.css'));
 // head script files and script
 
 $this->headScript()
@@ -29,15 +31,15 @@ $this->headScript()
         'crossorigin' => 'anonymous',
     ],
 )->appendScript(
-    $this->htmxConfig,
+    "htmx.config = '$this->htmxConfig'",
     '',
     ['noescape' => true]
 );
 
 // inline script which is printed at bottom of page
-$this->inlineScript()
-    ->appendFile('https://code.jquery.com/jquery-3.5.1.min.js');
-?>
+// $this->inlineScript()
+//     ->appendFile('https://code.jquery.com/jquery-3.5.1.min.js');
+// ?>
 <?=$this->doctype();?>
 
 <html>
@@ -49,8 +51,8 @@ $this->inlineScript()
     <?=$this->headScript()?>
 </head>
 <body>
-    <header id="app-header" class="container">
-        <nav>
+    <header id="app-header" class="container" style="margin-top:0; padding-top: 0;">
+        <nav style="margin-top:0; padding-top:0;">
             <!-- Brand -->
             <ul>
                 <li>
@@ -71,7 +73,6 @@ $this->inlineScript()
                         <i class="fa fa-wrench"></i> Contribute
                     </a>
                 </li>
-
                 <li>
                     <a href="<?=$this->url('api.ping')?>">
                         Ping Test
@@ -92,15 +93,25 @@ $this->inlineScript()
                 if ($this->user->getIdentity() === 'guest'):
                 ?>
                 <li>
-                    <a href="<?=$this->url('login')?>">
+                    <a href="<?=$this->url('um.login')?>">
                         Sign In
+                    </a>
+                </li>
+                <li>
+                    <a href="<?=$this->url('um.register')?>">
+                        Register
                     </a>
                 </li>
                 <?php
                 else:
                 ?>
                 <li>
-                    <a href="<?=$this->url('logout')?>">
+                    <a href="<?=$this->url('um.account')?>">
+                        Account
+                    </a>
+                </li>
+                <li>
+                    <a href="<?=$this->url('um.logout')?>">
                         Sign Out
                     </a>
                 </li>
@@ -110,7 +121,7 @@ $this->inlineScript()
             </ul>
         </nav>
     </header>
-    <main class="container">
+    <main id="app-work-space" class="container">
         <?=$this->content?>
     </main>
     <footer id="app-footer" class="container">
